refactor query parameter handling in collection utils